<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"


        >

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:padding="2dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/login_title"
                    android:background="@drawable/top_white"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="25sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/white"
                    >
                    <EditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_username"
                        android:gravity="center"
                        />
                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/login_password"
                        android:layout_marginTop="5dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:background="@drawable/bottom_white">
                    <Button
                        android:id="@+id/mSave"
                        android:text="@string/save"
                        android:background="@drawable/alarm_save"
                        style="@style/Dialog_buttion_style"

                        />
                    <Button
                        android:id="@+id/mEsc"
                        android:text="@string/esc"
                        android:background="@drawable/alarm_esc"
                        style="@style/Dialog_buttion_style"
                        />
                </LinearLayout>
            </LinearLayout>

    </LinearLayout>


