<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>


    </data>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/pay_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:scaleType="center"
            />
        <TextView
            android:id="@+id/pay_title"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="订单信息"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        >

        <TextView
            android:id="@+id/pay_license_plate"
            style="@style/PayStringTextStyle" />

        <TextView
            android:id="@+id/pay_stop_number"
            style="@style/PayStringTextStyle" />

        <TextView
            android:id="@+id/pay_long_time"
            style="@style/PayStringTextStyle"
            />

        <TextView
            android:id="@+id/pay_come_time"
            style="@style/PayStringTextStyle"
            />

        <TextView
            android:id="@+id/pay_out_time"
            style="@style/PayStringTextStyle" />

        <TextView
            android:id="@+id/pay_stop_money"
            style="@style/PayStringTextStyle" />

        <TextView
            android:id="@+id/pay_owe_money"
            style="@style/PayStringTextStyle" />

        <TextView
            android:id="@+id/pay_money"
            style="@style/PayStringTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/pay_bnt_one"
                style="@style/ButtonStyle"
                android:text="@string/pay_save"
                />
            <Button
                android:id="@+id/pay_bnt_two"
                style="@style/ButtonStyle"
                android:text="@string/pay_photo"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/pay_bnt_three"
                style="@style/ButtonStyle"
                android:text="@string/pay_print"
                />
            <Button
                android:id="@+id/pay_bnt_four"
                style="@style/ButtonStyle"
                android:visibility="invisible"
                android:text="@string/pay_r_print"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



</layout>