<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>

    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_admin_frame"
        android:padding="2dp"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/admin_title"
                    style="@style/AdminTitleTextStyle"
                    android:gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/admin_esc"
                    android:text="@string/admin_logout"
                    style="@style/AdminButtonStyle"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:background="@drawable/layout_admin_frame"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/user_icon"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_weight="20"
                        android:text="测试员 编号：00002"
                        style="@style/AdminTextStyle"
                        />
                    <TextView
                        style="@style/AdminTextStyle"
                        android:layout_weight="1"
                        android:background="@drawable/layout_admin_line"
                        />
                    <TextView
                        style="@style/AdminTextStyle"
                        android:layout_weight="20"
                        android:text="登录时间：00时08分"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical"
                android:layout_margin="2dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/light_blue"
                    android:text="@string/admin_title1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:gravity="center_vertical"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="2"
                       android:gravity="center"
                       >
                       <TextView
                           android:layout_width="65dp"
                           android:layout_height="65dp"
                           android:layout_centerVertical="true"
                           android:text="0"
                           android:gravity="center"
                           android:textColor="@color/white"
                           android:textSize="20sp"
                           android:background="@drawable/layout_admin2_money"
                           />
                   </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="小车"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="大车"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="特大型车"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            >
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/car"
                                />
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/big_car"
                                />
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/so_big_car"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                            <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="0"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="0"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="0"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical"
                android:layout_margin="2dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/light_blue"
                    android:text="@string/admin_title2"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:gravity="center_vertical"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"

                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        >
                        <TextView

                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_centerVertical="true"
                            android:text="0"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:background="@drawable/layout_admin2_money"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:layout_marginTop="2dp"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="总车位"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="在停"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            >
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/stop_p"
                                />
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:src="@drawable/stop_car"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="0"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="0"
                                android:gravity="center"
                                android:textSize="15sp"
                                android:textColor="@color/black"
                                />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
        <TextView
            android:id="@+id/admin_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/layout_admin_but_frame"
            android:text="返回"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            >
        </TextView>

    </LinearLayout>

</layout>